--- a/MyFirstAndroidCode/settings.gradle
+++ b/MyFirstAndroidCode/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':chapter02', ':chapter03', ':chapter03listview'
+include ':app', ':chapter02', ':chapter03', ':chapter03listview', ':chapter03msg'
