--- a/MyFirstAndroidCode/settings.gradle
+++ b/MyFirstAndroidCode/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':chapter02', ':chapter03', ':chapter03listview', ':chapter03msg', ':chapter04fragment', ':chapter05broadcast', ':chapter05forcelogoff', ':chapter06', ':chapter06sqlite'
+include ':app', ':chapter02', ':chapter03', ':chapter03listview', ':chapter03msg', ':chapter04fragment', ':chapter05broadcast', ':chapter05forcelogoff', ':chapter06', ':chapter06sqlite', ':chapter07content', ':chapter08'
