--- a/MyExercises/fragments/src/main/AndroidManifest.xml
+++ b/MyExercises/fragments/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.shadow.zyw.sdu.activitylifetime" >
+    package="com.shadow.zyw.sdu.fragments" >
 
     <application
         android:allowBackup="true"
@@ -17,9 +17,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SecondActivity"
-            android:label="@string/title_activity_second"
-            android:theme="@style/Theme.AppCompat.Dialog">
+            android:screenOrientation="sensor"
+            android:name=".DynamicFragActivity"
+            android:label="@string/title_activity_dynamic_frag" >
         </activity>
     </application>
 
